overflow error fixed

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -2,6 +2,7 @@
 
 body {
     background-color: black;
+    overflow-x: hidden;
 }
 
 .scrollbar-none::-webkit-scrollbar {
